# mplacas

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
docs/: ADR-009-energy-intelligence-cycle.md  ADR-010-historical-energy-trends.md  ADR-011-executive-energy-dashboard-contract.md  ADR-012-responsive-web-dashboard.md  ADR-013-climate-anomaly-engine.md  ADR-014-ai-assisted-grounded-explanations.md  ADR-015-telegram-alert-delivery.md  ADR-016-telegram-delivery-runtime.md  ADR-017-alert-ledger-sql-and-job.md  ADR-018-operational-alert-pipeline.md  ADR-019-climate-collection-pipeline.md  ADR-020-open-meteo-operational-adapter.md  ADR-021-daily-energy-orchestration.md  ADR-022-pipeline-execution-ledger.md  ADR-023-operational-pipeline-runtime.md  ADR-024-audit-remediation-ai-climate.md  ADR-025-google-cloud-run-platform.md  ADR-026-google-cloud-deployment-automation.md  ADR-027-monthly-reports-and-csv-export.md  ADR-028-pdf-and-xlsx-report-exports.md  ADR-029-operational-hardening-after-deep-audit.md  ADR-030-production-egress-and-request-tracing.md  ADR-031-operational-read-role-api-key.md  ADR-032-operational-credential-audit-trail.md  ADR-033-persistent-sensitive-action-audit.md  ADR-034-expanded-administrative-audit-events.md  ADR-035-mandatory-utility-bill-plant-scope.md  ADR-036-confirmed-billing-read-boundary.md  ADR-037-plant-scoped-operational-read-access.md  ADR-038-immutable-monthly-report-snapshots.md  ADR-039-focused-monthly-report-modules.md  ADR-040-transactional-alert-outbox.md  ADR-041-structured-observability-and-cloud-trace.md  ADR-042-opentelemetry-metrics-and-slo-alerts.md  ADR-043-persisted-operational-credentials.md  ADR-044-named-operational-users.md  ADR-045-mplacas-remains-single-tenant.md  ADR-046-decoupled-collection-worker-queue.md  ADR-047-nepviewer-collection-resilience.md  (+18 more)
frontend/: .env.example  (+6 more)
(+261 files in other folders)
