[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mplacas"
version = "0.1.0"
description = "Plataforma de inteligência, auditoria e gestão energética residencial"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.11,<1", "mypy>=1.15,<2"]

[tool.hatch.build.targets.wheel]
packages = ["src/mplacas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mplacas"]
