[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mplacas"
version = "0.2.0"
description = "Plataforma de inteligência, auditoria e gestão energética residencial"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.8,<3",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "aiosqlite>=0.21,<1",
  "pypdf>=5.7,<6",
  "reportlab>=4.4,<5",
  "xlsxwriter>=3.2,<4",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.11,<1", "mypy>=1.15,<2"]

[tool.hatch.build.targets.wheel]
packages = ["src/mplacas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E"]

[tool.mypy]
python_version = "3.12"
packages = ["mplacas"]
check_untyped_defs = true
warn_unused_ignores = true
